<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eee9e4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddDietActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <TextView
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/diet_type"
            />
        <Spinner
            android:id="@+id/addDietTypeSP"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Menu : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    <EditText
        android:id="@+id/addDietMenuET"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/menu"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Date : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    <EditText
        android:id="@+id/addDietDateET"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:editable="false"
        android:hint="@string/date"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Time : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    <EditText
        android:id="@+id/addDietTimeET"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:editable="false"
        android:textSize="16sp"
        android:hint="@string/time"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="40dp">

        <CheckBox
            android:onClick="onCheckboxClicked"
            android:id="@+id/addDietReminderCB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reminder"
            />
        <CheckBox
            android:onClick="onCheckboxClicked"
            android:id="@+id/addDietAlarmCB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/daily_alarm"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_height="70dp">
        <Button
            android:id="@+id/addDietSaveBTN"
            android:onClick="OnclickSaveDiet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:text="@string/save"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/addDietNewBTN"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:onClick="onClickDietNew"
            android:text="@string/neww"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />
    </LinearLayout>

    </LinearLayout>
</ScrollView>
