<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#eee9e4"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.warriors.group.icare.AddMedicineActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textColor="@android:color/black"
            android:text="Select Doctor: "
            android:textSize="16sp"
            android:layout_height="wrap_content" />
        <Spinner
            android:layout_width="0dp"
            android:id="@+id/addMedicineDoctorSpinner"
            android:layout_weight="4"
            android:layout_height="match_parent">
        </Spinner>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Name : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    <EditText
        android:id="@+id/addMedicineNameET"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/medicine_name"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Dose : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    <EditText
        android:id="@+id/addMedicineDoseET"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/medicine_dose"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Start Date : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    <EditText
        android:id="@+id/addMedicineFromDateET"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:editable="false"
        android:textSize="16sp"
        android:hint="@string/from_date"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="End Date : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    <EditText
        android:id="@+id/addMedicineToDateET"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:editable="false"
        android:textSize="16sp"
        android:hint="@string/to_date"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Remarks : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    <EditText
        android:id="@+id/addMedicineRemarks"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:hint="@string/remarks"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:orientation="vertical"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Dose schedule"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="40dp">

        <CheckBox
            android:textSize="12sp"
            android:onClick="onBoxClicked"
            android:id="@+id/addMedicineMorningCB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:text="@string/medicine_period_m"
            />


        <CheckBox
            android:textSize="12sp"
            android:onClick="onBoxClicked"
            android:id="@+id/addMedicineAfternoonCB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.35"
            android:text="@string/medicine_period_a"
            />

        <CheckBox
            android:textSize="12sp"
            android:onClick="onBoxClicked"
            android:id="@+id/addMedicineEveningCB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:text="@string/medicine_period_e"
            />

        <CheckBox
            android:textSize="12sp"
            android:onClick="onBoxClicked"
            android:id="@+id/addMedicineNightCB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/medicine_period_n"
            />

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="40dp">

        <CheckBox
            android:onClick="onBoxClicked"
            android:id="@+id/addMedicineDailyAlarmCB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/daily_alarm"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_height="70dp">
        <Button
            android:onClick="onClickMedicineSave"
            android:id="@+id/addMedicineSaveBTN"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:text="@string/save"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
            />
        <Button
            android:id="@+id/addMedicineNewBTN"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="onClickMedicineNew"
            android:background="@drawable/edit_text_background"
            android:text="@string/neww"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

            />
    </LinearLayout>


    </LinearLayout>

</ScrollView>
