<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#eee9e4"
    tools:context="com.warriors.group.icare.AddVaccinationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Name : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    <EditText
        android:id="@+id/addVaccinationVaccineNameET"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/vaccine_name"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Date : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    <EditText
        android:id="@+id/addVaccinationDateET"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:editable="false"
        android:hint="@string/date"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Time : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    <EditText
        android:editable="false"
        android:id="@+id/addVaccinationTimeET"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:hint="@string/time"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="Details : "
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    <EditText
        android:id="@+id/addVaccinationDetailsET"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/details"
        />
    </LinearLayout>
    <CheckBox
        android:onClick="onVaccineReminderBoxClicked"
        android:id="@+id/addVaccinationReminderCB"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/reminder"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_height="70dp">
        <Button
            android:id="@+id/addVaccinationSaveBTN"
            android:onClick="onClickVaccineSave"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:text="@string/save"
            android:textColor="@android:color/black"
            android:textSize="20sp"

            />
        <Button
            android:id="@+id/addVaccinationNewBTN"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:onClick="onClickVaccinationNew"
            android:text="@string/neww"
            android:textColor="@android:color/black"
            android:textSize="20sp"

            />
    </LinearLayout>

</LinearLayout>
</ScrollView>
