<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee9e4"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.warriors.group.icare.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <EditText
            android:id="@+id/userNameET"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/user_name"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:onClick="Login"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
